CTCT Wrapper review, ID's considered as strings

--- a/CTCTWrapper/CTCTWrapper.csproj
+++ b/CTCTWrapper/CTCTWrapper.csproj
@@ -75,15 +75,17 @@
     <Compile Include="Components\EmailCampaigns\Schedule.cs" />
     <Compile Include="Components\EmailCampaigns\TestSend.cs" />
     <Compile Include="Components\ResultSet.cs" />
+    <Compile Include="Components\Tracking\AllActivity.cs" />
     <Compile Include="Components\Tracking\BaseActivity.cs" />
     <Compile Include="Components\Tracking\BounceActivity.cs" />
     <Compile Include="Components\Tracking\ClickActivity.cs" />
+    <Compile Include="Components\Tracking\TrackingSummaryByEmailCampaign.cs" />
     <Compile Include="Components\Tracking\ForwardActivity.cs" />
     <Compile Include="Components\Tracking\OpenActivity.cs" />
-    <Compile Include="Components\Tracking\OptOutActivity.cs" />
     <Compile Include="Components\Tracking\SendActivity.cs" />
     <Compile Include="Components\Tracking\TrackingActivity.cs" />
     <Compile Include="Components\Tracking\TrackingSummary.cs" />
+    <Compile Include="Components\Tracking\UnsubscribeActivity.cs" />
     <Compile Include="ConstantContact.cs" />
     <Compile Include="Exceptions\CtctException.cs" />
     <Compile Include="Exceptions\IllegalArgumentException.cs" />
