--- a/CTCTWrapper/CTCTWrapper.UnitTest/CTCTWrapper.UnitTest.csproj
+++ b/CTCTWrapper/CTCTWrapper.UnitTest/CTCTWrapper.UnitTest.csproj
@@ -56,6 +56,9 @@
     <None Include="App.config">
       <SubType>Designer</SubType>
     </None>
+    <None Include="contacts.csv">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CTCTWrapper.csproj">
