--- a/CTCTWrapper/CTCTWrapper.UnitTest/CTCTWrapper.UnitTest.csproj
+++ b/CTCTWrapper/CTCTWrapper.UnitTest/CTCTWrapper.UnitTest.csproj
@@ -59,6 +59,9 @@
     <None Include="contacts.csv">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Include="contacts.xlsx">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CTCTWrapper.csproj">
